<resources>
    <string name="app_name">TravelApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_travel_app">Welcome to Travel App!</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="email">Email*</string>
    <string name="already_have_an_account_log_in">Already have an account? <b>Log In</b></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <b>Sign Up</b></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="please_enter_email_we_will_send_you_verification_code">Please enter email, we will send you verification code</string>
    <string name="next">Next</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="did_not_get_a_code_send_again">Did not get a code? <b>Send again</b></string>
    <string name="create_new_password">Create new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm">Confirm</string>
    <string name="first_screen_text">Embark on a Journey of Discovery interests</string>
    <string name="second_screen_text">Your Passport to Seamless Travel</string>
    <string name="third_screen_text">Unlock Hidden Gems Around the Globe</string>
    <string name="popular">Popular</string>
    <string name="must_visit_places">Must visit places</string>
    <string name="packages">Packages</string>
    <string name="see_all">See all</string>
</resources>