<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SignUpFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="700dp"
        app:cardBackgroundColor="@color/card_color"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MaterialCardView.Cut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome_text"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:text="@string/sign_up_to_continue"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_btn_white"
                android:ems="10"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_btn_white"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password_confirm"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_btn_white"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_text"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/ButtonStyle"
                android:layout_marginTop="75dp"
                android:background="@drawable/rounded_auth_btn"
                android:enabled="false"
                android:text="@string/sign_up"
                android:textColor="@color/card_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password_confirm" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins"
                android:text="@string/email"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins"
                android:text="@string/password"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/et_email"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <TextView
                android:id="@+id/confirm_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins"
                android:text="@string/confirm_password"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <TextView
                android:id="@+id/msg_login"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/already_have_an_account_log_in"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

            <ImageView
                android:id="@+id/btn_toggle_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/baseline_visibility_off_24"
                app:layout_constraintBottom_toBottomOf="@+id/et_password"
                app:layout_constraintEnd_toEndOf="@+id/et_password"
                app:layout_constraintTop_toTopOf="@+id/et_password" />

            <ImageView
                android:id="@+id/btn_toggle_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/baseline_visibility_off_24"
                app:layout_constraintBottom_toBottomOf="@+id/et_password_confirm"
                app:layout_constraintEnd_toEndOf="@+id/et_password_confirm"
                app:layout_constraintTop_toTopOf="@+id/et_password_confirm" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>