<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_img"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.auth.VerificationCodeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView5"
        android:layout_width="0dp"
        android:layout_height="600dp"
        app:cardBackgroundColor="@color/card_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MaterialCardView.Cut">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="100dp" />

            <TextView
                android:id="@+id/code_text"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/enter_verification_code"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_back" />

            <com.chaos.view.PinView
                android:id="@+id/pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:itemBackground="@color/button_color_white"
                android:textColor="@color/button_color_blue"
                android:textSize="24sp"
                app:itemHeight="55dp"
                app:itemRadius="10dp"
                app:itemWidth="55dp"
                android:cursorVisible="true"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/code_text"
                app:lineColor="@color/button_color_blue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                style="@style/ButtonStyle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_auth_btn"
                android:enabled="false"
                android:text="@string/next"
                android:textColor="@color/card_color"
                app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/send_again_msg"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/did_not_get_a_code_send_again"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/btn_next"
                app:layout_constraintStart_toStartOf="@+id/btn_next"
                app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>